--- a/themes/workshop-theme/layouts/docs/baseof.html
+++ b/themes/workshop-theme/layouts/docs/baseof.html
@@ -128,7 +128,7 @@
                                     </div>
                                     <div class="code-server-frame col-12 col-md-7 my-4 my-md-0">
                                         <iframe id="first-iframe" src="https://ttyd-terminal-demo.fly.dev" width="100%" height="1000px" style="border-radius: 10px;"></iframe>
-                                        <iframe id="second-iframe" src="http://localhost:7681" width="100%" height="1000px" style="border-radius: 10px;"></iframe>
+                                        <iframe id="second-iframe" src="http://172.16.50.2:8443/?folder=/config/workspace" width="100%" height="1000px" style="border-radius: 10px;"></iframe>
                                     </div>
                                     
                                 </div>
