--- a/themes/workshop-theme/assets/docs/scss/custom/components/_iframes.scss
+++ b/themes/workshop-theme/assets/docs/scss/custom/components/_iframes.scss
@@ -2,5 +2,15 @@
     display: none;
    &.active {
     display: block;
+    iframe {
+        position: sticky;
+        position: -webkit-sticky;
+        top: 82px; 
+        
+        @media (max-width: 767px) {
+            position: static;
+            top: 0;
+        }
+    }
    }
 }
